Finishing the Project

--- a/index.html
+++ b/index.html
@@ -5,29 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Blog preview card</title>
-
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+  <main>
+  <div class="ill"><img src="./assets/images/illustration-article.svg" alt="banner"></div>
+  <div class="ler">Learning</div>
+  <p class="pub">Published 21 Dec 2023</p>
+  <h2 class="htm">HTML & CSS foundations</h2>
+  <p class="the">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+  <div class="gre">
+    <img src="./assets/images/image-avatar.webp" alt="personal photo">
+    <span>Greg Hooper</span>
+  </div>
   
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Nader-Ramadan">Nader M. Ramadan</a>.
   </div>
 </body>
 </html>
